--- a/.xmobarrc
+++ b/.xmobarrc
@@ -6,7 +6,7 @@ Config {
 	position     = Top,
 	lowerOnStart = True,
 	commands     = [
-		Run Weather "CYKF" ["-t","<tempC>C (<skyCondition>)","-L","0","-H","22","-h","#FFB6B0","-l","#96CBFE"] 18000,
+		Run Weather "CYKF" ["-t","<tempC> (<skyCondition>)","-L","0","-H","22","-h","#FFB6B0","-l","#96CBFE"] 18000,
 		Run MultiCpu ["-t","Cpu: <total0> <total1> <total2> <total3> <total4> <total5> <total6> <total7>","-L","30","-H","60","-h","#FFB6B0","-w","3"] 10,
 		Run Memory ["-t","Mem: <usedratio>%","-H","8192","-L","4096","-h","#FFB6B0"] 10,
 		Run Network "eth0" ["-t","Net: <rx>/<tx>","-H","200","-L","10","-h","#FFB6B0"] 10,
