--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".Xresources.d/base16-xresources"]
 	path = .Xresources.d/base16-xresources
 	url = https://github.com/chriskempson/base16-xresources.git
+[submodule ".vim/bundle/vundle"]
+	path = .vim/bundle/vundle
+	url = https://github.com/gmarik/Vundle.vim.git
