--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/bundle/vundle"]
 	path = .vim/bundle/vundle
 	url = https://github.com/gmarik/Vundle.vim.git
+[submodule ".base16-codemirror"]
+	path = .base16-codemirror
+	url = https://github.com/idleberg/base16-codemirror.git
