--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule ".Xresources.d/base16-xresources"]
 	path = .Xresources.d/base16-xresources
 	url = https://github.com/chriskempson/base16-xresources.git
-[submodule ".vim/bundle/vundle"]
-	path = .vim/bundle/vundle
-	url = https://github.com/gmarik/Vundle.vim.git
+[submodule ".vim/bundle/Vundle.vim"]
+	path = .vim/bundle/Vundle.vim
+	url = https://github.com/VundleVim/Vundle.vim.git
 [submodule ".base16-codemirror"]
 	path = .base16-codemirror
 	url = https://github.com/idleberg/base16-codemirror.git
